# hci4gooddepthcamera

./: .gitattributes  CMakeLists.txt  CMakeUserPresets.json  README.md  conanfile.txt
hci4gooddepthcamera/sources/: main.cpp
main/source/: main.cpp
